# hawkes-lob-simulator

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.MD  requirements.txt
cpp/apps/: simulate_hawkes_multivariate.cpp
cpp/include/: csv_logger.h  event.h  hawkes_multivariate_process.h  hawkes_process.h  hawkes_univariate_process.h  order_book.h  poisson_process.h  process.h
cpp/src/: csv_logger.cpp  hawkes_multivariate_process.cpp  hawkes_univariate_process.cpp  order_book.cpp  poisson_process.cpp
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: BacktestCharts.css  BacktestCharts.jsx  BacktestResults.css  BacktestResults.jsx  BacktestTab.css  BacktestTab.jsx  Button.css  CandlestickChart.css  CandlestickChart.jsx  Card.css  ConfigPanel.jsx  ConfigureTab.css  ConfigureTab.jsx  LOBSimulatorTab.css  LOBSimulatorTab.jsx  MatrixInput.css  MatrixInput.jsx  OrderBookDisplay.css  OrderBookDisplay.jsx  RegimeBuilder.css  RegimeBuilder.jsx  RegimeDesignerModal.css  RegimeDesignerModal.jsx  ResultsTab.jsx  StrategyBuilder.css  StrategyBuilder.jsx  StrategyDesignerModal.css  StrategyDesignerModal.jsx  VisualizationPanel.jsx  WelcomeTab.css  WelcomeTab.jsx
frontend/src/services/: api.js
frontend/src/utils/: colors.js  regimePresets.js  spacing.js
python/bindings/: lob_bindings.cpp
python/lob_simulator/: __init__.py  api.py  backtest.py  backtest_v2.py  backtest_v3.py  expression_evaluator.py  strategies.py  strategies_v2.py  strategy_templates.py  strategy_validator.py
